# shoplifting-detection

./: .gitignore  README.md  main.py  pyproject.toml  run_all.sh  run_all_2.sh
latex/: abntex2-modelo-references.bib  facom-ufu-abntex2.cls  log_build.txt  template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.ilg  template.lof  template.lot  template.tex  template.toc
scripts/: benchmark_i3d_throughput.py  config.yaml  count_params.py  download_data.py  evaluate_i3d.py  evaluate_real_videos.py  evaluate_timesformer.py  generate_results.py  preprocess_i3d.py  preprocess_timesformer.py  train_i3d.py  train_timesformer.py
