[project]
name = "tcc-shoplifting"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "timesformer-shoplifting",
    "i3d-shoplifting",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "timesformer-shoplifting",
    "i3d-shoplifting"
]

[tool.uv.sources]
timesformer-shoplifting = { workspace = true }
i3d-shoplifting = { workspace = true }
